--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,28 +1,41 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-<h2>Editing Book</h2>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with model: @book do |f| %>
+<main>
+  <p id = "notice"></p> <!-- 空白 -->
 
-  <h4>Title</h4>
-  <%= f.text_field :title, size:50 %>
-  
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  <br>
-   <td><a ><%= f.submit "Update Book", class: "btn btn-sm btn-success" %></a></td>
-  <br><br>
-  <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
-  
-<% end %>
+  <div class = container>
+    <div class = "row">
+      <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h1>Editing Book</h1>
+
+        <%= form_with model: @book do |b| %>
+
+          <% if @book.errors.any? %>
+            <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+
+          <div>
+            <label>Title</label>
+            <%= b.text_field :title, autofocus: true %>
+          </div>
+
+          <div>
+            <label>Opinion</label>
+            <%= b.text_area :body %>
+          </div>
+
+          <%= b.submit "Update Book", class: "btn btn-success" %>
+
+        <% end %>
+
+        <a href = <%= book_path %>>Show</a>
+        |
+        <a href = <%= books_path %>>Back</a>
+
+      </div>
     </div>
   </div>
-</div>
+</main>
