--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,38 +1,52 @@
- <%if @book.present? && @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<p id = "notice"></p> <!-- 空白 -->
 
-<div class="container px-5 px-sm-0">
-  <div class="row">
-     <div class="col-md-3">
-      <%= render 'users/info', users: @users %>
-      <%= render 'books/new', books: @books %>
+<div class = "container px-5 px-sm-0">
+
+  <% if @book.errors.any? %>
+    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
+  <div class = "row">
+    <%= render partial: "layouts/sidebar", locals: {book: @book, user: @user} %>
+
+    <div class = "col-md-8 offset-md-1">
+      <h2>Books</h2>
+
+      <table class = "table table-hover table-inverse">
+        <thead>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan = "3"></th>
+        </thead>
+
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <a href = "<%= user_path(book.user_id) %>">
+                  <%= image_tag book.user.get_profile_image(80, 80) %>
+                </a>
+              </td>
+
+              <td>
+                <a href = "<%= book_path(book.id) %>">
+                  <%= book.title %>
+                </a>
+              </td>
+
+              <td><%= book.body %></td>
+
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+    </div>
   </div>
-<div class="col-md-8 offset-md-1">
-<h2>Books</h2>
-<table class="table">
-  <thead>
-    <tr>
-    <th></th>
-    <th>Title</th>
-    <th>Opinion</th>
-    </tr>
-  </thead>
-  
-  <tbody>
-<% @books.each do |book| %>
-  <tr>
-    <td><a href="<%= user_path(book.user) %>"><%= image_tag(book.user.profile_image, size: '100x100') %></a></td>
-    <td><%= link_to book.title, book_path(book.id) %></td>
-    <td><%= book.body %></td>
-<% end %>
-  </tr>
-  </tbody>
-</table>
-
 </div>
