--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,41 +1,41 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-      <%= render 'users/info', users: @users %>
-      <%= render 'books/new', books: @books %>
-    </div>
-    <div class="col-md-8 offset-md-1">
+<p id = "notice"><%= flash[:notice] %></p> <!-- 空白 -->
+
+<div class = "container">
+  <div class = "row">
+    <%= render partial: "layouts/sidebar", locals: {book: @book_new, user: @user} %>
+
+    <div class = "col-md-8 offset-md-1">
       <h2>Book detail</h2>
-      <table class="table">
+
+      <table class = "table">
         <tbody>
           <tr>
             <td>
-              <%= image_tag @user.profile_image, size: '100x100', alt: "#{@user.name}'s profile image" %><br>
-              <%= link_to @user.name, user_path(@user.id) %>
+              <a href = "<%= user_path(@user.id) %>">
+                <%= image_tag @user.get_profile_image(100, 100) %><br />
+                <%= @user.name %>
+              </a>
             </td>
-            <td><%= link_to @book.title, book_path(@book.id) %></td>
-            <td><%= @book.body %></td>
+
             <td>
-              <% if @book.favorited_by?(current_user) %>
-                <p>
-                  <%= link_to book_favorite_path(@book), method: :delete, remote: true do %>
-                    ♥<%= @book.favorites.count %> いいね
-                  <% end %>
-                </p>
-              <% else %>
-                <p>
-                  <%= link_to book_favorite_path(@book), method: :post, remote: true do %>
-                    ♡<%= @book.favorites.count %> いいね
-                  <% end %>
-                </p>
-              <% end %>
+              <a href = "<%= book_path %>">
+                <%= @book.title %>
+              </a>
             </td>
-            <% if current_user == @book.user %>
+            
+            <td>
+              <%= @book.body %>
+            </td>
+            <% if @user.id == current_user.id %>
               <td>
-                <%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %>
+                <a class = "btn btn-sm btn-success" href = "<%= edit_book_path %>">
+                  Edit
+                </a>
               </td>
               <td>
-                <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
+                <a data-confirm = "本当に消しますか？" class = "btn btn-sm btn-danger" href = "<%= book_path %>" data-method = "delete">
+                  Destroy
+                </a>
               </td>
             <% end %>
           </tr>
