--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,61 +1,113 @@
 <!DOCTYPE html>
-<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
+<html>
   <head>
     <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/ddce0f151a.js" crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/5efedb35ee.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body> 
-   <header>
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-      <li><%= link_to root_path do %>
-            <i class="navbar-brand"></i> Bookers <% end %></li>
-       <ul class="navbar-nav ml-auto">
-    <% if user_signed_in? %>
-    <li><%= link_to user_path(current_user.id) do %>
-            <i class="fa-solid fa-house"></i> Home <% end %></li>
-    <li><%= link_to "/users" do %>
-            <i class="fa-solid fa-users"></i> Users <% end %> </li>
-    <li><%= link_to "/books" do %>
-            <i class="fa-solid fa-book-open"></i> Books <% end %> </li>
-    <li><a href= "<%= destroy_user_session_path %>" data-method="delete"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
-    <% else %>
-    <li><%= link_to root_path do %>
-            <i class="fa-solid fa-house"></i> Home <% end %></li>
-    <li><%= link_to '/home/about' do %>
-            <i class="fa-solid fa-link"></i> About <% end %> </li>
-    <li><%= link_to "/users/sign_up" do %>
-            <i class="fa-solid fa-user-plus"></i> Sign up <% end %></li>
-    <li><%= link_to "/users/sign_in" do %>
-            <i class="fa-solid fa-right-to-bracket"></i> Log in <% end %> </li>
-    <% end %>
-        </ul>
-      </div>
-     </nav>
-  </header>
-   <main>
- <div class=="container mt-5">
-   <%= flash[:notice] %>
-  </div>
-     
-   </main>
+  <body>
+
+    <!-- 動的ヘッダー -->
+    <header>
+      <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class = container>
+          <a class = "navbar-brand" href = "/">
+            <span>Bookers</span>
+          </a>
+
+          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <!-- サインイン別で表示ボタン切り替え -->
+              <% if user_signed_in? %>  <!-- サインイン状態 -->
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= user_path(current_user.id) %>">
+                    <i class="fa-solid fa-house text-light"></i>
+                    Home
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= users_path %>">
+                    <i class="fa-solid fa-users"></i>
+                    Users
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= books_path %>">
+                    <i class="fa-solid fa-book-open"></i>
+                    Books
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= destroy_user_session_path %>" data-method = "delete">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    Log out
+                  </a>
+                </li>
+
+              <% else %>  <!-- サインアウト状態 -->
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= root_path %>">
+                    <i class="fa-solid fa-house text-light"></i>
+                    Home
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= about_path %>">
+                    <i class="fa-solid fa-link text-light"></i>
+                    About
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= new_user_registration_path %>">
+                    <i class="fa-solid fa-user-plus text-light"></i>
+                    Sign up
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a class = "nav-link text-light" href = "<%= new_user_session_path %>">
+                    <i class="fa-solid fa-right-to-bracket text-light"></i>
+                    Log in
+                  </a>
+                </li>
+              <% end %>
+              <!-- end of サインイン別で表示ボタン切り替え -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- end of 動的ヘッダー -->
+
     <%= yield %>
-  <footer>
-    <div class=="container mt-5">
-      <div class="row">
-        <div class="mx-auto">
-  <p><%= render 'books/footer' %></p>
+
+    <!-- コピーライト -->
+    <footer>
+      <div class = "container mt-5">
+        <div class = "row">
+          <div class = "mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+    <!-- end of コピーライト -->
+
   </body>
 </html>
