--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-3">
-      <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
-      <%= render 'books/books', books: @books %>
-    </div>
-    <div class="col-xs-9">
-      <table class="table table-sm user-index">
-        <h2>Users</h2>
+<p id = "notice"></p> <!-- 空白 -->
+
+<div class = "container px-5 px-sm-0">
+  <div class = "row">
+    <%= render partial: "layouts/sidebar", locals: {book: @book, user: @user} %>
+
+    <div class = "col-md-8 offset-md-1">
+      <h2>Users</h2>
+
+      <table class = "table">
         <thead>
           <th>image</th>
           <th>name</th>
-          <th></th>
+          <th colspan = "3"></th>
         </thead>
+
         <tbody>
           <% @users.each do |user| %>
             <tr>
-              <td><%= image_tag user.profile_image, size: "50x50", class: "fill", alt: "User Image", fallback: "no_image.jpg" %></td>
+              <td>
+                <a href = "<%= user_path(user.id) %>">
+                  <%= image_tag user.get_profile_image(80, 80) %>
+                </a>
+              </td>
               <td><%= user.name %></td>
-              <td><%= link_to "Show", "/users/#{user.id}" %></td>
+              <td><%= link_to "Show", user_path(user.id) %></td>
             </tr>
           <% end %>
         </tbody>
