--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,41 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-3">
-      <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
-      <%= render 'books/books', books: @books %>
-    </div>
-    <div class="col-xs-9">
-      <h1>Book detail</h1>
-      <table class="table table-user-show">
-        <% @books.each do |book| %>
+<p id = "notice"><%= flash[:notice] %></p> <!-- 空白 -->
+
+<div class = "container px-5 px-sm-0">
+  <div class = "row">
+    <%= render partial: "layouts/sidebar", locals: {book: @book, user: @user} %>
+
+    <div class = "col-md-8 offset-md-1">
+      <h2>Books</h2>
+
+      <table class = "table table-hover table-inverse">
+        <thead>
           <tr>
-            <td><%= link_to user_path(@user) do %>
-              <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg"%>
-            <% end %></td>
-              <td><%= link_to book.title, book_path(book.id) %></td>
-              <td><%= book.body %></td>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan = 3></th>
           </tr>
-        <% end %>
+        </thead>
+
+        <tbody>
+          <% @books.each do |book| %>
+            <% if book.user_id == @user.id %>
+              <tr>
+                <td>
+                  <a href = "<%= user_path(book.user_id) %>">
+                    <%= image_tag book.user.get_profile_image(80, 80) %>
+                  </a>
+                </td>
+                <td>
+                  <a href = "<%= book_path(book.id) %>">
+                    <%= book.title %>
+                  </a>
+                </td>
+                <td><%= book.body %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
       </table>
     </div>
   </div>
